--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4974,7 +4974,7 @@
                             This note is just for you and won’t be shared with
                             guests.
                           </div>
-                          <div class="_9hxttoo">
+                          <div class="hero-banner__label-wrapper">
                             <label class="new-arrow-underscore" for="instance_notes"
                               >Private note (optional)</label
                             ><textarea
