--- a/covidsafety.html
+++ b/covidsafety.html
@@ -1420,7 +1420,7 @@
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="hero-banner__label"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -1526,7 +1526,7 @@
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="hero-banner__label"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -1634,7 +1634,7 @@
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="hero-banner__label"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
@@ -1742,7 +1742,7 @@
                                       >
                                         <div class="_ir2o62c">
                                           <div>
-                                            <span class="_1p3joamp"
+                                            <span class="hero-banner__label"
                                               ><button
                                                 type="button"
                                                 class="_b0ybw8s"
