--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -404,7 +404,7 @@
                                   </div>
                                   <div class="_10bmve21">
                                     <div class="_1bpvmi6">
-                                      <div class="_16tcko6">
+                                      <div class="notification__question-content">
                                         <div class="_11pizxn">
                                           <svg
                                             viewBox="0 0 24 24"
@@ -577,7 +577,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -640,7 +640,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_gpfii59">2</div>
+                                      <div class="header__nav-profile-badge">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -996,7 +996,7 @@
                                         </div>
                                         <div class="_10bmve21">
                                           <div class="_1bpvmi6">
-                                            <div class="_16tcko6">
+                                            <div class="notification__question-content">
                                               <div class="_11pizxn">
                                                 <svg
                                                   viewBox="0 0 24 24"
