--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -544,7 +544,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_lo9vot">
                                                       $0.00
                                                     </div>
@@ -601,7 +601,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_lo9vot">0</div>
                                                   </div>
                                                 </div>
@@ -813,7 +813,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -876,7 +876,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_gpfii59">2</div>
+                                      <div class="header__nav-profile-badge">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -1292,7 +1292,7 @@
                                                       Current credit balance
                                                     </div>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_lo9vot">
                                                       $0.00
                                                     </div>
@@ -1349,7 +1349,7 @@
                                                       Your coupons
                                                     </div>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_lo9vot">0</div>
                                                   </div>
                                                 </div>
