--- a/preferences.html
+++ b/preferences.html
@@ -273,7 +273,7 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           Preferred language
                                         </div>
                                         <div
@@ -286,7 +286,7 @@
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -305,12 +305,12 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           Preferred language
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -343,7 +343,7 @@
                                           </div>
                                         </div>
                                         <div style="margin-bottom: 24px">
-                                          <div class="_9hxttoo">
+                                          <div class="hero-banner__label-wrapper">
                                             <label
                                               class="new-arrow-underscore"
                                               for="preferred_locale"
@@ -573,7 +573,7 @@
                                           class="btn-secondary"
                                           aria-busy="false"
                                         >
-                                          <span class="_ftj2sg4">Save</span>
+                                          <span class="hero-banner__submit-btn-text">Save</span>
                                         </button>
                                       </form>
                                     </div>
@@ -753,7 +753,7 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           Preferred currency
                                         </div>
                                         <div
@@ -768,7 +768,7 @@
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -787,12 +787,12 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           Preferred currency
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -818,7 +818,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_9hxttoo">
+                                          <div class="hero-banner__label-wrapper">
                                             <label
                                               class="new-arrow-underscore"
                                               for="native_currency"
@@ -982,7 +982,7 @@
                                           class="btn-secondary"
                                           aria-busy="false"
                                         >
-                                          <span class="_ftj2sg4">Save</span>
+                                          <span class="hero-banner__submit-btn-text">Save</span>
                                         </button>
                                       </form>
                                     </div>
@@ -992,7 +992,7 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">Time zone</div>
+                                        <div class="hero-banner__label">Time zone</div>
                                         <div
                                           style="
                                             margin-top: 8px;
@@ -1005,7 +1005,7 @@
                                         </div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -1024,10 +1024,10 @@
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
-                                        <div class="_1p3joamp">Time zone</div>
+                                        <div class="hero-banner__label">Time zone</div>
                                       </div>
                                       <div class="va-top-nowrap">
-                                        <div class="_1p3joamp">
+                                        <div class="hero-banner__label">
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
@@ -1053,7 +1053,7 @@
                                             margin-bottom: 24px;
                                           "
                                         >
-                                          <div class="_9hxttoo">
+                                          <div class="hero-banner__label-wrapper">
                                             <label class="new-arrow-underscore" for="timezone"
                                               >Time zone</label
                                             >
@@ -1724,7 +1724,7 @@
                                           class="btn-secondary"
                                           aria-busy="false"
                                         >
-                                          <span class="_ftj2sg4">Save</span>
+                                          <span class="hero-banner__submit-btn-text">Save</span>
                                         </button>
                                       </form>
                                     </div>
@@ -1827,7 +1827,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -1890,7 +1890,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_gpfii59">2</div>
+                                      <div class="header__nav-profile-badge">2</div>
                                     </button>
                                   </div>
                                 </div>
@@ -1980,7 +1980,7 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Preferred language
                                             </div>
                                             <div
@@ -1995,7 +1995,7 @@
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2014,12 +2014,12 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Preferred language
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2052,7 +2052,7 @@
                                               </div>
                                             </div>
                                             <div style="margin-bottom: 24px">
-                                              <div class="_9hxttoo">
+                                              <div class="hero-banner__label-wrapper">
                                                 <label
                                                   class="new-arrow-underscore"
                                                   for="preferred_locale"
@@ -2285,7 +2285,7 @@
                                               class="btn-secondary"
                                               aria-busy="false"
                                             >
-                                              <span class="_ftj2sg4">Save</span>
+                                              <span class="hero-banner__submit-btn-text">Save</span>
                                             </button>
                                           </form>
                                         </div>
@@ -2295,7 +2295,7 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Preferred currency
                                             </div>
                                             <div
@@ -2310,7 +2310,7 @@
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2329,12 +2329,12 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Preferred currency
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2360,7 +2360,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_9hxttoo">
+                                              <div class="hero-banner__label-wrapper">
                                                 <label
                                                   class="new-arrow-underscore"
                                                   for="native_currency"
@@ -2527,7 +2527,7 @@
                                               class="btn-secondary"
                                               aria-busy="false"
                                             >
-                                              <span class="_ftj2sg4">Save</span>
+                                              <span class="hero-banner__submit-btn-text">Save</span>
                                             </button>
                                           </form>
                                         </div>
@@ -2537,7 +2537,7 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Time zone
                                             </div>
                                             <div
@@ -2552,7 +2552,7 @@
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2571,12 +2571,12 @@
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               Time zone
                                             </div>
                                           </div>
                                           <div class="va-top-nowrap">
-                                            <div class="_1p3joamp">
+                                            <div class="hero-banner__label">
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
@@ -2602,7 +2602,7 @@
                                                 margin-bottom: 24px;
                                               "
                                             >
-                                              <div class="_9hxttoo">
+                                              <div class="hero-banner__label-wrapper">
                                                 <label
                                                   class="new-arrow-underscore"
                                                   for="timezone"
@@ -3294,7 +3294,7 @@
                                               class="btn-secondary"
                                               aria-busy="false"
                                             >
-                                              <span class="_ftj2sg4">Save</span>
+                                              <span class="hero-banner__submit-btn-text">Save</span>
                                             </button>
                                           </form>
                                         </div>
@@ -3303,7 +3303,7 @@
                                     <span id="FMP-target"></span>
                                   </div>
                                   <div class="notification__question-wrapper">
-                                    <div class="_16tcko6">
+                                    <div class="notification__question-content">
                                       <section>
                                         <div
                                           style="
