--- a/products.html
+++ b/products.html
@@ -1766,7 +1766,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="page-shell-mobile__container-ml-16">
+                                                <div class="_1mqc21n">
                                                   <div class="_1qsawv5">
                                                     Rinaldo is a Superhost
                                                   </div>
@@ -1798,7 +1798,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="page-shell-mobile__container-ml-16">
+                                                <div class="_1mqc21n">
                                                   <div class="_1qsawv5">
                                                     Great check-in experience
                                                   </div>
@@ -1829,7 +1829,7 @@
                                                     ></path>
                                                   </svg>
                                                 </div>
-                                                <div class="page-shell-mobile__container-ml-16">
+                                                <div class="_1mqc21n">
                                                   <div class="_1qsawv5">
                                                     Dive right in
                                                   </div>
@@ -8373,7 +8373,7 @@
                                             >
                                               <div class="header__nav-btn-container-text dir dir-ltr">
                                                 <div
-                                                  class="_z5mecy"
+                                                  class="header__nav-btn-container-icon-wrapper"
                                                   aria-hidden="true"
                                                 >
                                                   <svg
@@ -9500,7 +9500,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_1qsawv5">
                                                       Rinaldo is a Superhost
                                                     </div>
@@ -9533,7 +9533,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_1qsawv5">
                                                       Great check-in experience
                                                     </div>
@@ -9564,7 +9564,7 @@
                                                       ></path>
                                                     </svg>
                                                   </div>
-                                                  <div class="page-shell-mobile__container-ml-16">
+                                                  <div class="_1mqc21n">
                                                     <div class="_1qsawv5">
                                                       Dive right in
                                                     </div>
