--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -273,7 +273,7 @@
                                   <div class="flex-bar">
                                     <div class="flex-bar-item-grow">
                                       <span class="hero-banner__description"
-                                        ><div class="_1p3joamp">
+                                        ><div class="hero-banner__label">
                                           Company
                                         </div></span
                                       >
@@ -306,8 +306,8 @@
                                           for="email_removal_whitelist_switch"
                                           ><span
                                             id="email_removal_whitelist_switch--label"
-                                            class="_1p3joamp"
-                                            ><div class="_1p3joamp">
+                                            class="hero-banner__label"
+                                            ><div class="hero-banner__label">
                                               Allow me to use an email alias to
                                               reach guests
                                             </div></span
@@ -525,7 +525,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -671,7 +671,7 @@
                                       <div class="flex-bar">
                                         <div class="flex-bar-item-grow">
                                           <span class="hero-banner__description"
-                                            ><div class="_1p3joamp">
+                                            ><div class="hero-banner__label">
                                               Company
                                             </div></span
                                           >
@@ -706,8 +706,8 @@
                                               for="email_removal_whitelist_switch"
                                               ><span
                                                 id="email_removal_whitelist_switch--label"
-                                                class="_1p3joamp"
-                                                ><div class="_1p3joamp">
+                                                class="hero-banner__label"
+                                                ><div class="hero-banner__label">
                                                   Allow me to use an email alias
                                                   to reach guests
                                                 </div></span
