--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -461,7 +461,7 @@
                                 data-veloute="checkout-flow-submit-button"
                                 onclick="window.location.href='resolutions_pay.html';"
                               >
-                                <span class="_ftj2sg4"
+                                <span class="hero-banner__submit-btn-text"
                                   ><div
                                     class="flex"
                                     style="justify-content: center"
