--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1078,12 +1078,12 @@
                                 adjust times for each individual date.
                               </div>
                             </div>
-                            <div class="_9hxttoo">
+                            <div class="hero-banner__label-wrapper">
                               <div style="margin-bottom: 8px">
                                 <label
                                   class="explore-filter-menu__group-size-label"
                                   for="experience_default_time"
-                                  ><div class="_1p3joamp">
+                                  ><div class="hero-banner__label">
                                     Experience start time
                                   </div></label
                                 >
