--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1139,14 +1139,14 @@
                                   </div>
                                   <div class="_1r533mk">
                                     <span class="_1kr2rok6"
-                                      ><div class="_9hxttoo">
+                                      ><div class="hero-banner__label-wrapper">
                                         <label
                                           class="new-arrow-underscore"
                                           for="price_per_guest"
                                           >Each guest pays</label
                                         >
                                         <div dir="ltr">
-                                          <div class="_1wcr140x">
+                                          <div class="hero-banner__input-container">
                                             <div class="_ncmdki">
                                               <div
                                                 class="_55316h"
@@ -1162,10 +1162,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_178faes">
+                                            <div class="hero-banner__input-wrapper">
                                               <input
                                                 autocomplete="off"
-                                                class="_14fdu48d"
+                                                class="hero-banner__input-feild"
                                                 id="price_per_guest"
                                                 maxlength="7"
                                                 name="price_per_guest"
@@ -1184,7 +1184,7 @@
                                     >
                                     <div class="_tzvqgd">
                                       <div class="_1futcm29">
-                                        <div class="_1p3joamp">INR</div>
+                                        <div class="hero-banner__label">INR</div>
                                       </div>
                                       <div class="inline-block">
                                         <div class="hero-banner__description">17.60</div>
