--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1066,12 +1066,12 @@
                               </section>
                             </div>
                             <section>
-                              <div class="_9hxttoo">
+                              <div class="hero-banner__label-wrapper">
                                 <div style="margin-bottom: 8px">
                                   <label
                                     class="explore-filter-menu__group-size-label"
                                     for="trip_template_confirmed_booking_lead_hours"
-                                    ><div class="_1p3joamp">
+                                    ><div class="hero-banner__label">
                                       Cutoff time for additional guests
                                     </div></label
                                   >
@@ -1190,12 +1190,12 @@
                               >
                                 <hr class="_l1tb2l" />
                               </div>
-                              <div class="_9hxttoo">
+                              <div class="hero-banner__label-wrapper">
                                 <div style="margin-bottom: 8px">
                                   <label
                                     class="explore-filter-menu__group-size-label"
                                     for="trip_template_booking_lead_hours"
-                                    ><div class="_1p3joamp">
+                                    ><div class="hero-banner__label">
                                       Cutoff time for your first guest
                                     </div></label
                                   >
