--- a/transaction_history.html
+++ b/transaction_history.html
@@ -632,7 +632,7 @@
                                           <div class="notification__container">
                                             <div class="_j6urmsh">
                                               <div class="relative">
-                                                <div class="_9hxttoo">
+                                                <div class="hero-banner__label-wrapper">
                                                   <div class="_wlf6154">
                                                     <div class="overflow-hidden">
                                                       <select
@@ -670,7 +670,7 @@
                                             </div>
                                             <div class="_j6urmsh">
                                               <div class="relative">
-                                                <div class="_9hxttoo">
+                                                <div class="hero-banner__label-wrapper">
                                                   <div class="_wlf6154">
                                                     <div class="overflow-hidden">
                                                       <select
@@ -728,7 +728,7 @@
                                                     "
                                                   >
                                                     <div class="_1f6bwyr7">
-                                                      <div class="_9hxttoo">
+                                                      <div class="hero-banner__label-wrapper">
                                                         <label
                                                           class="new-arrow-underscore"
                                                           for="filter-start-month-select"
@@ -814,7 +814,7 @@
                                                       </div>
                                                     </div>
                                                     <div class="_170x3337">
-                                                      <div class="_9hxttoo">
+                                                      <div class="hero-banner__label-wrapper">
                                                         <label
                                                           class="new-arrow-underscore"
                                                           for="filter-start-year-select"
@@ -942,7 +942,7 @@
                                                     "
                                                   >
                                                     <div class="_1f6bwyr7">
-                                                      <div class="_9hxttoo">
+                                                      <div class="hero-banner__label-wrapper">
                                                         <label
                                                           class="new-arrow-underscore"
                                                           for="filter-end-month-select"
@@ -1028,7 +1028,7 @@
                                                       </div>
                                                     </div>
                                                     <div class="_170x3337">
-                                                      <div class="_9hxttoo">
+                                                      <div class="hero-banner__label-wrapper">
                                                         <label
                                                           class="new-arrow-underscore"
                                                           for="filter-end-year-select"
