--- a/contact-host.html
+++ b/contact-host.html
@@ -1592,7 +1592,7 @@
                                             >
                                               <div class="header__nav-btn-container-text dir dir-ltr">
                                                 <div
-                                                  class="_z5mecy"
+                                                  class="header__nav-btn-container-icon-wrapper"
                                                   aria-hidden="true"
                                                 >
                                                   <svg
