--- a/merchandising.html
+++ b/merchandising.html
@@ -4971,7 +4971,7 @@
                                                         class="header__nav-btn-container-text dir dir-ltr"
                                                       >
                                                         <div
-                                                          class="_z5mecy"
+                                                          class="header__nav-btn-container-icon-wrapper"
                                                           aria-hidden="true"
                                                         >
                                                           <svg
@@ -5045,7 +5045,7 @@
                                                           alt=""
                                                         />
                                                       </div>
-                                                      <div class="_gpfii59">
+                                                      <div class="header__nav-profile-badge">
                                                         2
                                                       </div>
                                                     </button>
