--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -495,7 +495,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -558,7 +558,7 @@
                                           alt=""
                                         />
                                       </div>
-                                      <div class="_gpfii59">2</div>
+                                      <div class="header__nav-profile-badge">2</div>
                                     </button>
                                   </div>
                                 </div>
