--- a/personal-info.html
+++ b/personal-info.html
@@ -3528,7 +3528,7 @@
                                       aria-label="Choose a language and currency"
                                     >
                                       <div class="header__nav-btn-container-text dir dir-ltr">
-                                        <div class="_z5mecy" aria-hidden="true">
+                                        <div class="header__nav-btn-container-icon-wrapper" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
                                             xmlns="http://www.w3.org/2000/svg"
